[package]
name = "national-grid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
geo-types = "0.7.2"
num = "0.4.0"
regex = "1.5.5"
anyhow = "1.0.53"
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }